Configuración para que los títulos tengan id automático

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-architect
 lang: es-AR
 title: Groupbit
 description: Desarrollo de software a medida
+kramdown:
+  auto_ids: true
